PR/31531: Takahiro Kambe: shutdown(8) quietly exit if execed from login shell